--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -136,6 +136,26 @@ header ul a {
   color: rgba(255, 255, 255, 0.7);
 }
 
+#video {
+  width: 100%;
+  padding-block: 50px;
+}
+#video .cotainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#video video {
+  width: 100%;
+  display: block;
+  margin-inline: auto;
+}
+@media (min-width: 900px) {
+  #video video {
+    max-width: 30rem;
+  }
+}
+
 #tokenomics {
   min-height: 100vh;
   width: 100%;
