--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -139,6 +139,26 @@ header {
   }
 }
 
+#video {
+  width: 100%;
+  padding-block: 50px;
+
+  .cotainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  video {
+    width: 100%;
+    display: block;
+    margin-inline: auto;
+
+    @media (min-width: 900px) {
+      max-width: 30rem;
+    }
+  }
+}
+
 #tokenomics {
   min-height: 100vh;
   width: 100%;
